Add icy support (IO and protocol runner)
Update the examples notebooks with better tracks visualization, new interpolater and IO

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -9,6 +9,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "417b8fee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "\n",
+    "import byotrack\n",
+    "\n",
+    "\n",
+    "TEST = True  # Set to False to analyze a whole video"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "323ef391",
    "metadata": {},
@@ -19,35 +38,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b1c494",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
-    "\n",
-    "from byotrack import Video, VideoTransformConfig\n",
-    "\n",
-    "TEST = True  # Set to False to analyze a whole video\n",
-    "\n",
-    "video_path = \"path/to/video.ext\"\n",
-    "icy_path = \"path/to/icy_dir/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2512af52",
    "metadata": {},
    "outputs": [],
    "source": [
+    "video_path = \"path/to/video.ext\"\n",
+    "\n",
     "# Simply open a video\n",
-    "video = Video(video_path)\n",
+    "video = byotrack.Video(video_path)\n",
     "\n",
     "fps = 20\n",
     "# fps = video.reader.fps\n",
     "\n",
-    "# Note: video could also be a 4 dimensionnal numpy array"
+    "# Note: video could also be a 4 dimensionnal numpy array loaded manually"
    ]
   },
   {
@@ -59,7 +62,7 @@
    "source": [
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = VideoTransformConfig(aggregate=True, normalize=True, q_min=0.01, q_max=0.999)\n",
+    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.01, q_max=0.999)\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
@@ -119,24 +122,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c718014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
-    "from byotrack.implementation.detector.wavelet import WaveletDetector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5c9d5d64",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the detector object with its hyper parameters\n",
+    "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
     "\n",
     "detector = WaveletDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
    ]
@@ -271,23 +262,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd7e085",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from byotrack import Track\n",
-    "from byotrack.implementation.linker.icy_emht import IcyEMHTLinker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "fe8593a2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from byotrack.implementation.linker.icy_emht import IcyEMHTLinker\n",
+    "\n",
     "# Create the linker object with icy path\n",
     "# This Linker requires to install Icy software first\n",
+    "\n",
+    "icy_path = \"path/to/icy_dir/\"\n",
     "\n",
     "linker = IcyEMHTLinker(icy_path)"
    ]
@@ -329,7 +313,7 @@
     "# Visualize tracks existence in time\n",
     "\n",
     "# Transform into tensor\n",
-    "tracks_tensor = Track.tensorize(tracks)\n",
+    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
     "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
     "\n",
     "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
@@ -344,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "905634f6",
+   "id": "b3833447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,6 +339,10 @@
     "fps = 20\n",
     "running = False\n",
     "display_detections = False\n",
+    "\n",
+    "# Build a color map\n",
+    "hsv = mpl.colormaps[\"hsv\"]\n",
+    "colors = list(map(lambda x: tuple(int(c * 255) for c in x[:3]), map(hsv, [i / 200 for i in range(200)])))\n",
     "\n",
     "frame_id = 0\n",
     "\n",
@@ -373,12 +361,12 @@
     "        if torch.isnan(point).any():\n",
     "            continue\n",
     "\n",
-    "        x, y = point.round().to(torch.int).tolist()\n",
+    "        i, j = point.round().to(torch.int).tolist()\n",
     "\n",
-    "        color = (0, 0, 255)  # Red\n",
+    "        color = colors[track.identifier % 200]\n",
     "\n",
-    "        cv2.circle(frame, (x, y), 5, color)\n",
-    "        cv2.putText(frame, str(track.identifier % 10), (x + 4, y - 4), cv2.FONT_HERSHEY_SIMPLEX, 0.3, color)\n",
+    "        cv2.circle(frame, (j, i), 5, color)\n",
+    "        cv2.putText(frame, str(track.identifier % 10), (j + 4, i - 4), cv2.FONT_HERSHEY_SIMPLEX, 0.3, color)\n",
     "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', frame)\n",
@@ -452,7 +440,7 @@
     "# Visualize tracks existence in time\n",
     "\n",
     "# Transform into tensor\n",
-    "tracks_tensor = Track.tensorize(tracks)\n",
+    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
     "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
     "\n",
     "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
@@ -487,7 +475,7 @@
     "# Visualize tracks existence in time\n",
     "\n",
     "# Transform into tensor\n",
-    "tracks_tensor = Track.tensorize(tracks)\n",
+    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
     "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
     "\n",
     "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
@@ -561,7 +549,7 @@
     "# Visualize tracks existence in time\n",
     "\n",
     "# Transform into tensor\n",
-    "tracks_tensor = Track.tensorize(tracks)\n",
+    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
     "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
     "\n",
     "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
@@ -588,6 +576,10 @@
     "running = False\n",
     "display_detections = False\n",
     "\n",
+    "# Build a color map\n",
+    "hsv = mpl.colormaps[\"hsv\"]\n",
+    "colors = list(map(lambda x: tuple(int(c * 255) for c in x[:3]), map(hsv, [i / 200 for i in range(200)])))\n",
+    "\n",
     "frame_id = 0\n",
     "\n",
     "while True:\n",
@@ -605,12 +597,12 @@
     "        if torch.isnan(point).any():\n",
     "            continue\n",
     "\n",
-    "        x, y = point.round().to(torch.int).tolist()\n",
+    "        i, j = point.round().to(torch.int).tolist()\n",
     "\n",
-    "        color = (0, 0, 255)  # Red\n",
+    "        color = colors[track.identifier % 200]\n",
     "\n",
-    "        cv2.circle(frame, (x, y), 5, color)\n",
-    "        cv2.putText(frame, str(track.identifier % 10), (x + 4, y - 4), cv2.FONT_HERSHEY_SIMPLEX, 0.3, color)\n",
+    "        cv2.circle(frame, (j, i), 5, color)\n",
+    "        cv2.putText(frame, str(track.identifier % 10), (j + 4, i - 4), cv2.FONT_HERSHEY_SIMPLEX, 0.3, color)\n",
     "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', frame)\n",
@@ -639,6 +631,105 @@
     "\n",
     "# Closes all the frames\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7fb4c5",
+   "metadata": {},
+   "source": [
+    "## Postprocessing: Fill NaN with interpolated values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46b7b62d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from byotrack.implementation.refiner.interpolater import ForwardBackwardInterpolater"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e11f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After EMC2 stitching, NaN values can be inside merged tracks.\n",
+    "# It can be filled with interpolation between known positions\n",
+    "\n",
+    "# Note that you can add this refiner to your MultiStepTracker pipeline\n",
+    "\n",
+    "method = \"constant\"  # tps / constant\n",
+    "full = False  # Extrapolate position of the tracks on the all frame range and not just the track lifespan\n",
+    "\n",
+    "tracks = ForwardBackwardInterpolater(method, full=False).run(video, tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3daa43b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize tracks existence in time\n",
+    "\n",
+    "# Transform into tensor\n",
+    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
+    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
+    "\n",
+    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
+    "\n",
+    "plt.figure(figsize=(24, 16), dpi=100)\n",
+    "plt.xlabel(\"Track id\")\n",
+    "plt.ylabel(\"Frame\")\n",
+    "plt.imshow(mask)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb0c8205",
+   "metadata": {},
+   "source": [
+    "## Load or save tracks to files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3461904c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save tracks in ByoTrack format (compressed in a torch tensor)\n",
+    "\n",
+    "byotrack.Track.save(tracks, \"tracks.pth\")\n",
+    "\n",
+    "# Can be reload with\n",
+    "tracks = byotrack.Track.load(\"tracks.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b10fa2a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We also provide IO with Icy software\n",
+    "\n",
+    "from byotrack import icy\n",
+    "\n",
+    "\n",
+    "icy.save_tracks(tracks, \"tracks.xml\")  # Note that holes should should be filled first with the ForwardBackwardInterpolater\n",
+    "\n",
+    "# You can (re)load tracks from icy with\n",
+    "tracks = icy.load_tracks(\"tracks.xml\")"
    ]
   }
  ],
