--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -15,6 +15,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b2635bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "\n",
+    "import byotrack\n",
+    "\n",
+    "TEST = True  # Set to False to analyze a whole video"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e9740b7b",
    "metadata": {},
@@ -29,25 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
+    "video_path = \"path/to/video.ext\"\n",
     "\n",
-    "from byotrack import Video, VideoTransformConfig\n",
-    "\n",
-    "TEST = True  # Set to False to analyze a whole video\n",
-    "\n",
-    "video_path = \"path/to/video.ext\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ae7430c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Simply open a video\n",
-    "video = Video(video_path)\n",
+    "video = byotrack.Video(video_path)\n",
     "\n",
     "fps = 20\n",
     "# fps = video.reader.fps\n",
@@ -64,7 +67,7 @@
    "source": [
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = VideoTransformConfig(aggregate=True, normalize=True, q_min=0.02, q_max=0.999)\n",
+    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.02, q_max=0.999)\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
@@ -100,9 +103,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
     "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
     "\n",
     "WaveletDetector?"
@@ -217,9 +217,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
     "from byotrack.implementation.detector.stardist import StarDistDetector\n",
     "\n",
     "StarDistDetector?"
