Add visualization module

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -22,6 +22,7 @@
     "import torch\n",
     "\n",
     "import byotrack\n",
+    "import byotrack.visualize\n",
     "\n",
     "\n",
     "TEST = True  # Set to False to analyze a whole video"
@@ -62,7 +63,7 @@
    "source": [
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.01, q_max=0.999)\n",
+    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.01, q_max=0.995, smooth_clip=1.0)\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
@@ -86,29 +87,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a6ebdf",
+   "id": "689677a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualisation of the whole video with opencv\n",
+    "# Visualization\n",
+    "# Use w/x to move forward in time (or space to run/pause the video)\n",
     "\n",
-    "for i, frame in enumerate(video):\n",
-    "    # Display the resulting frame\n",
-    "    cv2.imshow('Frame', frame)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(video)}')\n",
-    "\n",
-    "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(1000 // fps) & 0xFF\n",
-    "\n",
-    "    if key == ord('q'):\n",
-    "        break\n",
-    "\n",
-    "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
-    "        break\n",
-    "\n",
-    "\n",
-    "# Closes all the frames\n",
-    "cv2.destroyAllWindows()"
+    "byotrack.visualize.InteractiveVisualizer(video).run()"
    ]
   },
   {
@@ -129,7 +115,7 @@
     "# Create the detector object with its hyper parameters\n",
     "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
     "\n",
-    "detector = WaveletDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -172,32 +158,16 @@
    "outputs": [],
    "source": [
     "# Display the detections with opencv\n",
-    "# Use w and x to move backward/forward in the video\n",
+    "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use v to display the video\n",
+    "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "i = 0\n",
-    "while True:\n",
-    "    mask = (detections_sequence[i].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
     "\n",
-    "    # Display the resulting frame\n",
-    "    cv2.imshow('Frame', mask)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(detections_sequence)} - Number of detections: {detections_sequence[i].length}')\n",
+    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence)\n",
+    "vis._display_detections = 1  # Mask\n",
+    "vis._display_video = False\n",
     "\n",
-    "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey() & 0xFF\n",
-    "\n",
-    "    if key == ord('q'):\n",
-    "        break\n",
-    "\n",
-    "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
-    "        break\n",
-    "\n",
-    "    if key == ord(\"w\"):\n",
-    "        i = (i - 1) % len(detections_sequence)\n",
-    "\n",
-    "    if key == ord(\"x\"):\n",
-    "        i = (i + 1) % len(detections_sequence)\n",
-    "\n",
-    "cv2.destroyAllWindows()"
+    "vis.run()"
    ]
   },
   {
@@ -310,91 +280,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks existence in time\n",
+    "# Visualize track lifetime\n",
     "\n",
-    "# Transform into tensor\n",
-    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
-    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
-    "\n",
-    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
-    "\n",
-    "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.xlabel(\"Track id\")\n",
-    "plt.ylabel(\"Frame\")\n",
-    "plt.imshow(mask)\n",
-    "plt.show()"
+    "byotrack.visualize.display_lifetime(tracks)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3833447",
+   "id": "3e1add03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks with opencv\n",
-    "# Use w/x to move backward/forward in the video (or space to run the video)\n",
-    "# Use c to display also the detections on the frame\n",
+    "# Display the detections with opencv\n",
+    "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
+    "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "fps = 20\n",
-    "running = False\n",
-    "display_detections = False\n",
+    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks)\n",
+    "vis._display_tracks = 1\n",
     "\n",
-    "# Build a color map\n",
-    "hsv = mpl.colormaps[\"hsv\"]\n",
-    "colors = list(map(lambda x: tuple(int(c * 255) for c in x[:3]), map(hsv, [i / 200 for i in range(200)])))\n",
-    "\n",
-    "frame_id = 0\n",
-    "\n",
-    "while True:\n",
-    "    frame_id += running\n",
-    "    frame = (video[frame_id] * 255).astype(np.uint8)\n",
-    "    if display_detections and frame_id < len(detections_sequence):\n",
-    "        mask = (detections_sequence[frame_id].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
-    "        frame = np.concatenate((mask[..., None], frame, np.zeros_like(frame)), axis=2)\n",
-    "    else:\n",
-    "        frame = np.concatenate((np.zeros_like(frame), frame, np.zeros_like(frame)), axis=2)\n",
-    "\n",
-    "    # Add tracklets\n",
-    "    for track in tracks:\n",
-    "        point = track[frame_id]\n",
-    "        if torch.isnan(point).any():\n",
-    "            continue\n",
-    "\n",
-    "        i, j = point.round().to(torch.int).tolist()\n",
-    "\n",
-    "        color = colors[track.identifier % 200]\n",
-    "\n",
-    "        cv2.circle(frame, (j, i), 5, color)\n",
-    "        cv2.putText(frame, str(track.identifier % 10), (j + 4, i - 4), cv2.FONT_HERSHEY_SIMPLEX, 0.3, color)\n",
-    "\n",
-    "    # Display the resulting frame\n",
-    "    cv2.imshow('Frame', frame)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {frame_id} / {len(video)}')\n",
-    "\n",
-    "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(1000 // fps) & 0xFF\n",
-    "\n",
-    "    if key == ord('q'):\n",
-    "        break\n",
-    "\n",
-    "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
-    "        break\n",
-    "\n",
-    "    if key == ord(\" \"):\n",
-    "        running = not running\n",
-    "\n",
-    "    if not running and key == ord(\"w\"):  # Prev\n",
-    "        frame_id = (frame_id - 1) % len(video)\n",
-    "\n",
-    "    if not running and key == ord(\"x\"):  # Next\n",
-    "        frame_id = (frame_id + 1) % len(video)\n",
-    "        \n",
-    "    if key == ord(\"c\"):\n",
-    "        display_detections = 1 - display_detections\n",
-    "\n",
-    "# Closes all the frames\n",
-    "cv2.destroyAllWindows()"
+    "vis.run()"
    ]
   },
   {
@@ -437,19 +343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks existence in time\n",
+    "# Visualize track lifetime\n",
     "\n",
-    "# Transform into tensor\n",
-    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
-    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
-    "\n",
-    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
-    "\n",
-    "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.xlabel(\"Track id\")\n",
-    "plt.ylabel(\"Frame\")\n",
-    "plt.imshow(mask)\n",
-    "plt.show()"
+    "byotrack.visualize.display_lifetime(tracks)"
    ]
   },
   {
@@ -472,19 +368,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks existence in time\n",
+    "# Visualize track lifetime\n",
     "\n",
-    "# Transform into tensor\n",
-    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
-    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
-    "\n",
-    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
-    "\n",
-    "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.xlabel(\"Track id\")\n",
-    "plt.ylabel(\"Frame\")\n",
-    "plt.imshow(mask)\n",
-    "plt.show()"
+    "byotrack.visualize.display_lifetime(tracks)"
    ]
   },
   {
@@ -546,19 +432,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks existence in time\n",
+    "# Visualize track lifetime\n",
     "\n",
-    "# Transform into tensor\n",
-    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
-    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
-    "\n",
-    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
-    "\n",
-    "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.xlabel(\"Track id\")\n",
-    "plt.ylabel(\"Frame\")\n",
-    "plt.imshow(mask)\n",
-    "plt.show()"
+    "byotrack.visualize.display_lifetime(tracks)"
    ]
   },
   {
@@ -568,69 +444,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks with opencv\n",
-    "# Use w/x to move backward/forward in the video (or space to run the video)\n",
-    "# Use c to display also the detections on the frame\n",
+    "# Display the detections with opencv\n",
+    "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
+    "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "fps = 20\n",
-    "running = False\n",
-    "display_detections = False\n",
+    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks)\n",
+    "vis._display_tracks = 1\n",
     "\n",
-    "# Build a color map\n",
-    "hsv = mpl.colormaps[\"hsv\"]\n",
-    "colors = list(map(lambda x: tuple(int(c * 255) for c in x[:3]), map(hsv, [i / 200 for i in range(200)])))\n",
-    "\n",
-    "frame_id = 0\n",
-    "\n",
-    "while True:\n",
-    "    frame_id += running\n",
-    "    frame = (video[frame_id] * 255).astype(np.uint8)\n",
-    "    if display_detections and frame_id < len(detections_sequence):\n",
-    "        mask = (detections_sequence[frame_id].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
-    "        frame = np.concatenate((mask[..., None], frame, np.zeros_like(frame)), axis=2)\n",
-    "    else:\n",
-    "        frame = np.concatenate((np.zeros_like(frame), frame, np.zeros_like(frame)), axis=2)\n",
-    "\n",
-    "    # Add tracklets\n",
-    "    for track in tracks:\n",
-    "        point = track[frame_id]\n",
-    "        if torch.isnan(point).any():\n",
-    "            continue\n",
-    "\n",
-    "        i, j = point.round().to(torch.int).tolist()\n",
-    "\n",
-    "        color = colors[track.identifier % 200]\n",
-    "\n",
-    "        cv2.circle(frame, (j, i), 5, color)\n",
-    "        cv2.putText(frame, str(track.identifier % 10), (j + 4, i - 4), cv2.FONT_HERSHEY_SIMPLEX, 0.3, color)\n",
-    "\n",
-    "    # Display the resulting frame\n",
-    "    cv2.imshow('Frame', frame)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {frame_id} / {len(video)}')\n",
-    "\n",
-    "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(1000 // fps) & 0xFF\n",
-    "\n",
-    "    if key == ord('q'):\n",
-    "        break\n",
-    "\n",
-    "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
-    "        break\n",
-    "\n",
-    "    if key == ord(\" \"):\n",
-    "        running = not running\n",
-    "\n",
-    "    if not running and key == ord(\"w\"):  # Prev\n",
-    "        frame_id = (frame_id - 1) % len(video)\n",
-    "\n",
-    "    if not running and key == ord(\"x\"):  # Next\n",
-    "        frame_id = (frame_id + 1) % len(video)\n",
-    "        \n",
-    "    if key == ord(\"c\"):\n",
-    "        display_detections = 1 - display_detections\n",
-    "\n",
-    "# Closes all the frames\n",
-    "cv2.destroyAllWindows()"
+    "vis.run()"
    ]
   },
   {
@@ -664,7 +486,7 @@
     "# Note that you can add this refiner to your MultiStepTracker pipeline\n",
     "\n",
     "method = \"constant\"  # tps / constant\n",
-    "full = False  # Extrapolate position of the tracks on the all frame range and not just the track lifespan\n",
+    "full = False  # Extrapolate position of the tracks on the all frame range and not just for the track lifespan\n",
     "\n",
     "tracks = ForwardBackwardInterpolater(method, full=False).run(video, tracks)"
    ]
@@ -676,19 +498,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize tracks existence in time\n",
+    "# Visualize track lifetime\n",
     "\n",
-    "# Transform into tensor\n",
-    "tracks_tensor = byotrack.Track.tensorize(tracks)\n",
-    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
-    "\n",
-    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
-    "\n",
-    "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.xlabel(\"Track id\")\n",
-    "plt.ylabel(\"Frame\")\n",
-    "plt.imshow(mask)\n",
-    "plt.show()"
+    "byotrack.visualize.display_lifetime(tracks)"
    ]
   },
   {
