--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.02, q_max=0.999)\n",
+    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.02, q_max=0.995, smooth_clip=1.0)\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
@@ -118,7 +118,7 @@
     "# Create the detector object with its hyper parameters. \n",
     "# The most important ones being the scale (size of the spots) and k the threshold noise\n",
     "\n",
-    "detector = WaveletDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "scale = 1\n",
     "\n",
     "i = 0\n",
-    "detector = WaveletDetector(scale=scale, k=3.0, min_area=3, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=scale, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -176,12 +176,12 @@
     "        \n",
     "    if key == ord(\"b\"):\n",
     "        scale = max(0, scale - 1)\n",
-    "        detector = SpotDetector(scale, detector.k, detector.min_area, detector.device)\n",
+    "        detector = WaveletDetector(scale, detector.k, detector.min_area, detector.device)\n",
     "        \n",
     "    \n",
     "    if key == ord(\"n\"):\n",
     "        scale = min(4, scale + 1)\n",
-    "        detector = SpotDetector(scale, detector.k, detector.min_area, detector.device)\n",
+    "        detector = WaveletDetector(scale, detector.k, detector.min_area, detector.device)\n",
     "\n",
     "\n",
     "cv2.destroyAllWindows()"
@@ -349,48 +349,14 @@
    "outputs": [],
    "source": [
     "# Display the detections with opencv\n",
-    "# Use w and x to move backward/forward in the video\n",
-    "# Use c to switch display mode (None / mask / segmentation)\n",
+    "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use v to switch on/off the display of video\n",
+    "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "display = 1\n",
-    "i = 0\n",
-    "while True:\n",
-    "    mask = (detections_sequence[i].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
-    "    segmentation = detections_sequence[i].segmentation.clone().numpy()\n",
-    "    segmentation = (segmentation % 206) + 50\n",
-    "    segmentation[detections_sequence[i].segmentation == 0] = 0\n",
-    "    segementation = segmentation.astype(np.uint8)\n",
-    "    frame = (video[i] * 255).round().astype(np.uint8)\n",
-    "    if display == 0:\n",
-    "        image = np.concatenate((np.zeros_like(frame), frame, np.zeros_like(frame)), axis=-1)\n",
-    "    elif display == 1:\n",
-    "        image = np.concatenate((np.zeros_like(frame), frame, mask[..., None]), axis=-1)\n",
-    "    else:\n",
-    "        image = np.concatenate((np.zeros_like(frame), frame, segementation[..., None]), axis=-1)\n",
-    "    \n",
-    "    # Display the resulting frame\n",
-    "    cv2.imshow('Frame', image)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(detections_sequence)} - Number of detections: {detections_sequence[i].length}')\n",
+    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence)\n",
+    "vis._display_detections = 1  # Mask\n",
     "\n",
-    "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey() & 0xFF\n",
-    "\n",
-    "    if key == ord('q'):\n",
-    "        break\n",
-    "\n",
-    "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
-    "        break\n",
-    "        \n",
-    "    if key == ord(\"w\"):\n",
-    "        i = (i - 1) % len(detections_sequence)\n",
-    "\n",
-    "    if key == ord(\"x\"):\n",
-    "        i = (i + 1) % len(detections_sequence)\n",
-    "        \n",
-    "    if key == ord(\"c\"):\n",
-    "        display = (display + 1) % 3\n",
-    "\n",
-    "cv2.destroyAllWindows()"
+    "vis.run()"
    ]
   }
  ],
