--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -350,13 +350,10 @@
    "source": [
     "# Display the detections with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
-    "# Use v to switch on/off the display of video\n",
+    "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence)\n",
-    "vis._display_detections = 1  # Mask\n",
-    "\n",
-    "vis.run()"
+    "byotrack.visualize.InteractiveVisualizer(video, detections_sequence).run()"
    ]
   }
  ],
