--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -159,15 +159,11 @@
    "source": [
     "# Display the detections with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
-    "# Use v to display the video\n",
+    "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
     "\n",
-    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence)\n",
-    "vis._display_detections = 1  # Mask\n",
-    "vis._display_video = False\n",
-    "\n",
-    "vis.run()"
+    "byotrack.visualize.InteractiveVisualizer(video, detections_sequence).run()"
    ]
   },
   {
@@ -292,15 +288,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the detections with opencv\n",
+    "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks)\n",
-    "vis._display_tracks = 1\n",
-    "\n",
-    "vis.run()"
+    "byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks).run()"
    ]
   },
   {
@@ -444,15 +437,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the detections with opencv\n",
+    "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "vis = byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks)\n",
-    "vis._display_tracks = 1\n",
-    "\n",
-    "vis.run()"
+    "byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks).run()"
    ]
   },
   {
