Support for Fiji software and TrackMate

--- a/docs/source/run_examples/ByoTrack fundamental.ipynb
+++ b/docs/source/run_examples/ByoTrack fundamental.ipynb
@@ -274,7 +274,7 @@
     "# Create the linker object with icy path\n",
     "# This Linker requires to install Icy software first\n",
     "\n",
-    "icy_path = \"path/to/icy_dir/\"\n",
+    "icy_path = \"path/to/icy/icy.jar\"\n",
     "\n",
     "linker = IcyEMHTLinker(icy_path)"
    ]
