Add the support of full specs for EMHT
EMHT estimation of parameters is pretty bad in some cases. It is thus very important to be
able to set manually the parameters

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -232,26 +232,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.implementation.linker.icy_emht import IcyEMHTLinker\n",
+    "from byotrack.implementation.linker.icy_emht import IcyEMHTLinker, Motion, EMHTParameters\n",
     "\n",
     "# Create the linker object with icy path\n",
     "# This Linker requires to install Icy software first\n",
     "\n",
     "icy_path = \"path/to/icy/icy.jar\"\n",
+    "motion = Motion.BROWNIAN  # Already by default. Can also be DIRECTED or MULTI (both)\n",
     "\n",
-    "linker = IcyEMHTLinker(icy_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5de479b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# You can set the expected motion of particles\n",
-    "\n",
-    "linker.motion = linker.Motion.BROWNIAN  # Already by default"
+    "if True:  # You can choose to set manually the parameters. See EMHTParameters?\n",
+    "    parameters = EMHTParameters(gate_factor=5.0, motion=motion)\n",
+    "    linker = IcyEMHTLinker(icy_path, parameters)\n",
+    "else:\n",
+    "    linker = IcyEMHTLinker(icy_path)\n",
+    "    linker.motion = motion  # Set motion afterwards is no parameters are provided"
    ]
   },
   {
